# websocket-client

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
cmake/: LibWebsocketClientConfig.cmake.in  version.h.in
examples/: CMakeLists.txt  client.cpp
examples/client-static/: client.cpp
include/: channel.hpp  common.hpp  configuration.hpp  frameinfo.hpp  global.hpp  message.hpp  reliability.hpp  utils.hpp  version.h  websocket.hpp  websocketclient.h  websocketclient.hpp
src/: capi.cpp  channel.cpp  configuration.cpp  global.cpp  message.cpp  websocket.cpp
src/impl/: certificate.cpp  certificate.hpp  channel.cpp  channel.hpp  http.cpp  http.hpp  httpproxytransport.cpp  httpproxytransport.hpp  init.cpp  init.hpp  internals.hpp  pollinterrupter.cpp  pollinterrupter.hpp  pollservice.cpp  pollservice.hpp  processor.cpp  processor.hpp  queue.hpp  sha.cpp  sha.hpp  socket.hpp  tcptransport.cpp  tcptransport.hpp  threadpool.cpp  threadpool.hpp  tls.cpp  tls.hpp  tlstransport.cpp  tlstransport.hpp  transport.cpp  transport.hpp  utils.cpp  utils.hpp  verifiedtlstransport.cpp  verifiedtlstransport.hpp  websocketimpl.cpp  websocketimpl.hpp  wshandshake.cpp  wshandshake.hpp  wstransport.cpp  (+1 more)
